Add test launch configs for other GCs